# amazon-bedrock-in-action

./: README.md  list_models.py  main.py  operations.py  pyproject.toml
model_invocation/: ai21_text_model.py  amazon_text_model.py  amazon_titan.py  anthropic_text_model.py  cohere_text_model.py  meta_text_model.py  stability_image_model.py
model_invocation/embedding/: amazon_titan.py  cohere.py
model_invocation/image/: amazon_titan.py  stability_diffusion.py
model_invocation/text/: ai21_jurassic.py  amazon_titan.py  anthropic_claude.py  cohere_command.py  meta_llama2.py
utils/: exception_handler.py
