[tool.poetry]
name = "amazon-bedrock-in-action"
version = "0.1.0"
description = "Practical Examples of Amazon Bedrock"
authors = ["Ankit Jain"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
